# GraphicsEngine

./: CMakeLists.txt  LICENSE  README.md
demo/: chess.cpp
includes/GraphicsEngine/: camera.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
includes/GraphicsEngine/light/: directionlight.hpp  pointlight.hpp  spotlight.hpp
includes/GraphicsEngine/scene/: scene.hpp
lib/glad/: glad.c
res/models/AK47/: AK47.mtl
res/models/demo/ChessGame/Chessboard/: Chessboard.mtl
res/models/demo/ChessGame/SoldierPiece/: SoldierPiece.mtl
res/shaders/: CustomColor.fs  LightningSrc.fs  model.fs  model.vs
src/: camera.cpp  directionlight.cpp  load_stb.cpp  mesh.cpp  model.cpp  pointlight.cpp  scene.cpp  shader.cpp  spotlight.cpp  texture.cpp
tests/: test1.cpp  test2.cpp
